[package]
name = "crisper"
version = "0.1.0"
authors = ["Pranav Gaddamadugu <pranavsaig@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.2.1"
atoi = "0.3.2"
bytes = "0.6.0"
prost = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.14"
spinach = { path = "../spinach" }
timely = { version = "0.11.1", features = ["bincode"] }
zmq = "0.9"

[build-dependencies]
prost-build = { version = "0.6.0" }
serde = { version = "1.0", features = ["derive"] }


